cmake_minimum_required(VERSION 2.8.4)
project(mbed)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    MODSERIAL/ChangeLog.c
    MODSERIAL/FLUSH.cpp
    MODSERIAL/GETC.cpp
    MODSERIAL/INIT.cpp
    MODSERIAL/ISR_RX.cpp
    MODSERIAL/ISR_TX.cpp
    MODSERIAL/MACROS.h
    MODSERIAL/MODSERIAL.cpp
    MODSERIAL/MODSERIAL.h
    MODSERIAL/MODSERIAL_IRQ_INFO.cpp
    MODSERIAL/PUTC.cpp
    MODSERIAL/RESIZE.cpp
    Odometry/Odometry.cpp
    Odometry/Odometry.h
    QEI/QEI.cpp
    QEI/QEI.h
    ros_lib/base_local_planner/Position2DInt.h
    ros_lib/control_msgs/FollowJointTrajectoryAction.h
    ros_lib/control_msgs/FollowJointTrajectoryActionFeedback.h
    ros_lib/control_msgs/FollowJointTrajectoryActionGoal.h
    ros_lib/control_msgs/FollowJointTrajectoryActionResult.h
    ros_lib/control_msgs/FollowJointTrajectoryFeedback.h
    ros_lib/control_msgs/FollowJointTrajectoryGoal.h
    ros_lib/control_msgs/FollowJointTrajectoryResult.h
    ros_lib/control_msgs/GripperCommand.h
    ros_lib/control_msgs/GripperCommandAction.h
    ros_lib/control_msgs/GripperCommandActionFeedback.h
    ros_lib/control_msgs/GripperCommandActionGoal.h
    ros_lib/control_msgs/GripperCommandActionResult.h
    ros_lib/control_msgs/GripperCommandFeedback.h
    ros_lib/control_msgs/GripperCommandGoal.h
    ros_lib/control_msgs/GripperCommandResult.h
    ros_lib/control_msgs/JointControllerState.h
    ros_lib/control_msgs/JointTolerance.h
    ros_lib/control_msgs/JointTrajectoryAction.h
    ros_lib/control_msgs/JointTrajectoryActionFeedback.h
    ros_lib/control_msgs/JointTrajectoryActionGoal.h
    ros_lib/control_msgs/JointTrajectoryActionResult.h
    ros_lib/control_msgs/JointTrajectoryControllerState.h
    ros_lib/control_msgs/JointTrajectoryFeedback.h
    ros_lib/control_msgs/JointTrajectoryGoal.h
    ros_lib/control_msgs/JointTrajectoryResult.h
    ros_lib/control_msgs/PointHeadAction.h
    ros_lib/control_msgs/PointHeadActionFeedback.h
    ros_lib/control_msgs/PointHeadActionGoal.h
    ros_lib/control_msgs/PointHeadActionResult.h
    ros_lib/control_msgs/PointHeadFeedback.h
    ros_lib/control_msgs/PointHeadGoal.h
    ros_lib/control_msgs/PointHeadResult.h
    ros_lib/control_msgs/QueryCalibrationState.h
    ros_lib/control_msgs/QueryTrajectoryState.h
    ros_lib/control_msgs/SingleJointPositionAction.h
    ros_lib/control_msgs/SingleJointPositionActionFeedback.h
    ros_lib/control_msgs/SingleJointPositionActionGoal.h
    ros_lib/control_msgs/SingleJointPositionActionResult.h
    ros_lib/control_msgs/SingleJointPositionFeedback.h
    ros_lib/control_msgs/SingleJointPositionGoal.h
    ros_lib/control_msgs/SingleJointPositionResult.h
    ros_lib/diagnostic_msgs/DiagnosticArray.h
    ros_lib/diagnostic_msgs/DiagnosticStatus.h
    ros_lib/diagnostic_msgs/KeyValue.h
    ros_lib/diagnostic_msgs/SelfTest.h
    ros_lib/geometry_msgs/Point.h
    ros_lib/geometry_msgs/Point32.h
    ros_lib/geometry_msgs/PointStamped.h
    ros_lib/geometry_msgs/Polygon.h
    ros_lib/geometry_msgs/PolygonStamped.h
    ros_lib/geometry_msgs/Pose.h
    ros_lib/geometry_msgs/Pose2D.h
    ros_lib/geometry_msgs/PoseArray.h
    ros_lib/geometry_msgs/PoseStamped.h
    ros_lib/geometry_msgs/PoseWithCovariance.h
    ros_lib/geometry_msgs/PoseWithCovarianceStamped.h
    ros_lib/geometry_msgs/Quaternion.h
    ros_lib/geometry_msgs/QuaternionStamped.h
    ros_lib/geometry_msgs/Transform.h
    ros_lib/geometry_msgs/TransformStamped.h
    ros_lib/geometry_msgs/Twist.h
    ros_lib/geometry_msgs/TwistStamped.h
    ros_lib/geometry_msgs/TwistWithCovariance.h
    ros_lib/geometry_msgs/TwistWithCovarianceStamped.h
    ros_lib/geometry_msgs/Vector3.h
    ros_lib/geometry_msgs/Vector3Stamped.h
    ros_lib/geometry_msgs/Wrench.h
    ros_lib/geometry_msgs/WrenchStamped.h
    ros_lib/nodelet/NodeletList.h
    ros_lib/nodelet/NodeletLoad.h
    ros_lib/nodelet/NodeletUnload.h
    ros_lib/pcl_msgs/ModelCoefficients.h
    ros_lib/pcl_msgs/PointIndices.h
    ros_lib/pcl_msgs/PolygonMesh.h
    ros_lib/pcl_msgs/Vertices.h
    ros_lib/ros/duration.h
    ros_lib/ros/msg.h
    ros_lib/ros/node_handle.h
    ros_lib/ros/publisher.h
    ros_lib/ros/service_client.h
    ros_lib/ros/service_server.h
    ros_lib/ros/subscriber.h
    ros_lib/ros/time.h
    ros_lib/rosgraph_msgs/Clock.h
    ros_lib/rosgraph_msgs/Log.h
    ros_lib/rosgraph_msgs/TopicStatistics.h
    ros_lib/rosserial_msgs/Log.h
    ros_lib/rosserial_msgs/RequestMessageInfo.h
    ros_lib/rosserial_msgs/RequestParam.h
    ros_lib/rosserial_msgs/RequestServiceInfo.h
    ros_lib/rosserial_msgs/TopicInfo.h
    ros_lib/sensor_msgs/CameraInfo.h
    ros_lib/sensor_msgs/ChannelFloat32.h
    ros_lib/sensor_msgs/CompressedImage.h
    ros_lib/sensor_msgs/FluidPressure.h
    ros_lib/sensor_msgs/Illuminance.h
    ros_lib/sensor_msgs/Image.h
    ros_lib/sensor_msgs/Imu.h
    ros_lib/sensor_msgs/JointState.h
    ros_lib/sensor_msgs/Joy.h
    ros_lib/sensor_msgs/JoyFeedback.h
    ros_lib/sensor_msgs/JoyFeedbackArray.h
    ros_lib/sensor_msgs/LaserEcho.h
    ros_lib/sensor_msgs/LaserScan.h
    ros_lib/sensor_msgs/MagneticField.h
    ros_lib/sensor_msgs/MultiDOFJointState.h
    ros_lib/sensor_msgs/MultiEchoLaserScan.h
    ros_lib/sensor_msgs/NavSatFix.h
    ros_lib/sensor_msgs/NavSatStatus.h
    ros_lib/sensor_msgs/PointCloud.h
    ros_lib/sensor_msgs/PointCloud2.h
    ros_lib/sensor_msgs/PointField.h
    ros_lib/sensor_msgs/Range.h
    ros_lib/sensor_msgs/RegionOfInterest.h
    ros_lib/sensor_msgs/RelativeHumidity.h
    ros_lib/sensor_msgs/SetCameraInfo.h
    ros_lib/sensor_msgs/Temperature.h
    ros_lib/sensor_msgs/TimeReference.h
    ros_lib/shape_msgs/Mesh.h
    ros_lib/shape_msgs/MeshTriangle.h
    ros_lib/shape_msgs/Plane.h
    ros_lib/shape_msgs/SolidPrimitive.h
    ros_lib/smach_msgs/SmachContainerInitialStatusCmd.h
    ros_lib/smach_msgs/SmachContainerStatus.h
    ros_lib/smach_msgs/SmachContainerStructure.h
    ros_lib/std_msgs/Bool.h
    ros_lib/std_msgs/Byte.h
    ros_lib/std_msgs/ByteMultiArray.h
    ros_lib/std_msgs/Char.h
    ros_lib/std_msgs/ColorRGBA.h
    ros_lib/std_msgs/Duration.h
    ros_lib/std_msgs/Empty.h
    ros_lib/std_msgs/Float32.h
    ros_lib/std_msgs/Float32MultiArray.h
    ros_lib/std_msgs/Float64.h
    ros_lib/std_msgs/Float64MultiArray.h
    ros_lib/std_msgs/Header.h
    ros_lib/std_msgs/Int16.h
    ros_lib/std_msgs/Int16MultiArray.h
    ros_lib/std_msgs/Int32.h
    ros_lib/std_msgs/Int32MultiArray.h
    ros_lib/std_msgs/Int64.h
    ros_lib/std_msgs/Int64MultiArray.h
    ros_lib/std_msgs/Int8.h
    ros_lib/std_msgs/Int8MultiArray.h
    ros_lib/std_msgs/MultiArrayDimension.h
    ros_lib/std_msgs/MultiArrayLayout.h
    ros_lib/std_msgs/String.h
    ros_lib/std_msgs/Time.h
    ros_lib/std_msgs/UInt16.h
    ros_lib/std_msgs/UInt16MultiArray.h
    ros_lib/std_msgs/UInt32.h
    ros_lib/std_msgs/UInt32MultiArray.h
    ros_lib/std_msgs/UInt64.h
    ros_lib/std_msgs/UInt64MultiArray.h
    ros_lib/std_msgs/UInt8.h
    ros_lib/std_msgs/UInt8MultiArray.h
    ros_lib/std_srvs/Empty.h
    ros_lib/stereo_msgs/DisparityImage.h
    ros_lib/tf/FrameGraph.h
    ros_lib/tf/tf.h
    ros_lib/tf/tfMessage.h
    ros_lib/tf/transform_broadcaster.h
    ros_lib/tf2_msgs/FrameGraph.h
    ros_lib/tf2_msgs/LookupTransformAction.h
    ros_lib/tf2_msgs/LookupTransformActionFeedback.h
    ros_lib/tf2_msgs/LookupTransformActionGoal.h
    ros_lib/tf2_msgs/LookupTransformActionResult.h
    ros_lib/tf2_msgs/LookupTransformFeedback.h
    ros_lib/tf2_msgs/LookupTransformGoal.h
    ros_lib/tf2_msgs/LookupTransformResult.h
    ros_lib/tf2_msgs/TF2Error.h
    ros_lib/tf2_msgs/TFMessage.h
    ros_lib/topic_tools/DemuxAdd.h
    ros_lib/topic_tools/DemuxDelete.h
    ros_lib/topic_tools/DemuxList.h
    ros_lib/topic_tools/DemuxSelect.h
    ros_lib/topic_tools/MuxAdd.h
    ros_lib/topic_tools/MuxDelete.h
    ros_lib/topic_tools/MuxList.h
    ros_lib/topic_tools/MuxSelect.h
    ros_lib/visualization_msgs/ImageMarker.h
    ros_lib/visualization_msgs/InteractiveMarker.h
    ros_lib/visualization_msgs/InteractiveMarkerControl.h
    ros_lib/visualization_msgs/InteractiveMarkerFeedback.h
    ros_lib/visualization_msgs/InteractiveMarkerInit.h
    ros_lib/visualization_msgs/InteractiveMarkerPose.h
    ros_lib/visualization_msgs/InteractiveMarkerUpdate.h
    ros_lib/visualization_msgs/Marker.h
    ros_lib/visualization_msgs/MarkerArray.h
    ros_lib/visualization_msgs/MenuEntry.h
    ros_lib/duration.cpp
    ros_lib/MbedHardware.h
    ros_lib/ros.h
    ros_lib/time.cpp
    main.cpp
    RosOdeometry.cpp)

include_directories(MODSERIAL)
include_directories(Odometry)
include_directories(QEI)
include_directories(ros_lib)

add_executable(mbed ${SOURCE_FILES})